plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.yourssu'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:3.4.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.4.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.4.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'ch.qos.logback:logback-access:1.4.14'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-gson:0.12.6'

    runtimeOnly 'com.h2database:h2:2.3.232'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.4'
    testImplementation 'io.rest-assured:rest-assured:5.5.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
